[tool.poetry]
name = "service-bridge"
version = "0.1.0"
description = ""
authors = ["PilotChalkanov <nik.chalkanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19.6"
psycopg2-binary = "2.9.10"
python-dotenv = "1.0.1"


[tool.poetry.group.test.dependencies]
black="24.10.0"
pytest = "*"
pytest-azurepipelines = "1.0.5"
pytest-cov = "4.1.0"
pytest-asyncio ="0.24.0"
[tool.poetry.group.dev.dependencies]
black="24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
