[tool.poetry]
name = "service-bridge"
version = "0.1.0"
description = ""
authors = ["PilotChalkanov <nik.chalkanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19.6"
asyncpg = "^0.30.0"
python-dotenv = "1.0.1"
aiohttp="3.10.*"
quart-bcrypt="0.0.9"
quart-db="^0.8.3"
quart-auth="^0.10.1"
marshmallow-dataclass="^8.7.0"

[tool.poetry.group.test.dependencies]
black="24.10.0"
pytest = "*"
pytest-azurepipelines = "1.0.5"
pytest-cov = "4.1.0"
pytest-asyncio ="0.24.0"

[tool.poetry.group.dev.dependencies]
black="24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-server = "service_bridge.app:run"